--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "parcel src/index.html --open"
   },
   "dependencies": {
+    "moment": "^2.30.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
